bai tap ve nha day 31

--- a/btvn-day31/index.html
+++ b/btvn-day31/index.html
@@ -111,8 +111,8 @@
   <form class="login">
     <h2>Welcome, User!</h2>
     <p>Please log in</p>
-    <input type="text" id="email" placeholder="User Name" />
-    <input type="password" id="password" placeholder="Password" />
+    <input type="text" name="email" class="email" placeholder="User Name" />
+    <input type="password" name="password" class="pass" placeholder="Password" />
     <button type="button" id="loginBtn" class="log-in">Log In</button>
   </form>
   <script src="src/main.js"></script>
